--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 
 		<div class="container" align="center">
 			<h1 class="my-4">Jiwon Jeong
-				<small>Portfolio</small>
 			</h1>
 			<div align="center">
 				<!-- <p class="lead text-center">Feel free to reach me</p> -->
@@ -85,9 +84,7 @@
 				<br>
 				<br>
 				<p class="lead text-center" style="font-size:20px">
-						Hi, there! I'm Jiwon Jeong. \n
-						I'm a data science enthusiast, a Master's degree candidate and a writer on Medium. \n
-						I love to play with data, travel, read and write. Thanks for visiting 😍
+						Hi, there! I'm Jiwon Jeong.	I'm a data science enthusiast, a Master's degree candidate and a writer on Medium 😍
 
 					</p>
 			</div>
@@ -97,10 +94,10 @@
 			<div class="projectFilter">
 				<center>
 					<a href="#" filter="*" class="current">All</a>
-					<a href="#" filter=".blog">Blog Posts</a>
 					<a href="#" filter=".ml">ML</a>
 					<a href="#" filter=".dl">DL</a>
 					<a href="#" filter=".nlp">NLP</a>
+					<a href="#" filter=".blog">Blog</a>
 				</center>
 			</div>
 
@@ -116,7 +113,7 @@
 						<div class="card-body">
 							<h4 class="card-title">
 								<center>
-									<h4 class="card-title">Explaining the basics of ANN</h4>
+									<h4 class="card-title">Demystifying the basics of ANN</h4>
 								</center>
 							</h4>
 								<center>
@@ -124,7 +121,7 @@
 								</center>
 								<br>
 								<ul style="list-style-type:square; text-align:left;">
-									<li>Medium Blog</li>
+									<li>Medium</li>
 								</ul>
 							<br>
 
@@ -132,9 +129,9 @@
 					</div>
 				</div>
 
-				<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/projects-instructor-application-python')">
+				<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Coursera_deeplearning_ai')">
 						<div class="card h-100">
-							<img class="card-img-top" src="images/icons/deeplearning_ai.png" alt="deeplearning_ai">
+							<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
@@ -142,13 +139,13 @@
 									</center>
 								</h4>
 									<center>
-										<p class="card-text">Certifications and all code assignments</p>
+										<p class="card-text">Certifications & All code assignments</p>
 									</center>
 									<br>
 									<ul style="list-style-type:square; text-align:left;">
 										<li>Python</li>
 										<li>Certifications</li>
-										<li>Medium Blog</li>
+										<li>Medium</li>
 									</ul>
 								<br>
 
@@ -156,8 +153,7 @@
 						</div>
 					</div>
 
-
-					<div class="blog ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Cosmetic')">
+					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Cosmetic')">
 						<div class="card h-100">
 								<img class="card-img-top" src="images/icons/cosmetic.jpg" alt="Cosmetic">
 							<div class="card-body">
@@ -171,10 +167,133 @@
 									</center>
 									<br>
 									<ul style="list-style-type:square; text-align:left;">
-										<li>python</li>
+										<li>Python</li>
 										<li>Web Scraping</li>
 										<li>Interactive Visualization</li>
-										<li>Medium Blog</li>
+										<li>Medium</li>
+									</ul>
+								<br>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Youtube')">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/youtube.jpg" alt="youtube">
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">Suggesting youtuber strategy</h4>
+									</center>
+								</h4>
+									<center>
+										<p class="card-text">to be a successful youtuber</p>
+									</center>
+									<br>
+									<ul style="list-style-type:square; text-align:left;">
+										<li>R</li>
+										<li>Youtube API</li>
+										<li>Visualization</li>
+										<li>Medium</li>
+									</ul>
+								<br>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Cohort')">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/cohort.jpg" alt="cohort">
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">Customer Segmentation</h4>
+									</center>
+								</h4>
+									<center>
+										<p class="card-text">with RFM values and K-Means clustering</p>
+									</center>
+									<br>
+									<ul style="list-style-type:square; text-align:left;">
+										<li>Python</li>
+										<li>Visualization</li>
+										<li>Medium</li>
+									</ul>
+								<br>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://towardsdatascience.com/hands-off-keyboard-warrior-text-mining-with-toxic-comments-6603ee3bc12e')">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/toxic.gif" alt="Toxic comment">
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">Toxic Comment Classification</h4>
+									</center>
+								</h4>
+									<center>
+										<p class="card-text">with multi-headed model</p>
+									</center>
+									<br>
+									<ul style="list-style-type:square; text-align:left;">
+										<li>R</li>
+										<li>Visualization</li>
+										<li>Medium</li>
+									</ul>
+								<br>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/lyrics')">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/lyrics.png" alt="Lyrics">
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">What songs tell us about</h4>
+									</center>
+								</h4>
+									<center>
+										<p class="card-text">text mining with lyrics</p>
+									</center>
+									<br>
+									<ul style="list-style-type:square; text-align:left;">
+										<li>R</li>
+										<li>Web Scraping</li>
+										<li>Visualization</li>
+										<li>Medium</li>
+									</ul>
+								<br>
+
+							</div>
+						</div>
+					</div>
+
+					<div class=" col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Templete')">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/templete.jpg" alt="templete">
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">Templete</h4>
+									</center>
+								</h4>
+									<center>
+										<p class="card-text">for data science</p>
+									</center>
+									<br>
+									<ul style="list-style-type:square; text-align:left;">
+										<li>Python</li>
+										<li>R</li>
+										<li>SQL</li>
+										<li>Pyspark</li>
 									</ul>
 								<br>
 
@@ -186,7 +305,7 @@
 
 		<div class="footer-bottom">
 			<p class="m-0 text-center text-white" style="font-size:18px">
-				<a> template by </a>
+				<a> Template by </a>
 				<a target="_blank" href="https://gsurma.github.io/">
 					gsurma
 				</a>
