--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 			<p class="m-0 text-center text-white" style="font-size:18px">
 				<a> Template by </a>
 				<a target="_blank" href="https://gsurma.github.io/">
-					gsurma
+					Greg Surma
 				</a>
 				<!-- <script>document.write(new Date().getFullYear())</script></p> -->
 		</div>
