--- a/index.html
+++ b/index.html
@@ -107,201 +107,274 @@
 
 			<div class="projectContainer row">
 
-				<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link(https://medium.com/p/the-most-intuitive-and-easiest-guide-for-artificial-neural-network-6a3f2bc0eecb?source=email-1df293b5ca56--writer.postDistributed&sk=a9021d009dcd1651c16b59c6e48d0533')">
+				<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 					<div class="card h-100">
-						<img class="card-img-top" src="images/icons/easiest_ANN.jpg" alt="Easiest_ANN">
+							<img class="card-img-top" src="images/icons/easiest_ANN.jpg" alt="Easiest_ANN">
+						</a>
 						<div class="card-body">
 							<h4 class="card-title">
 								<center>
 									<h4 class="card-title">Demystifying the basics of ANN</h4>
 								</center>
 							</h4>
-								<center>
-									<p class="card-text">with the least amount of maths</p>
-								</center>
-								<br>
-								<ul style="list-style-type:square; text-align:left;">
+							<center>
+								<p class="card-text">with the least amount of maths</p>
+							</center>
+							<br>
+							<ul style="list-style-type:square">
 									<li>Medium</li>
-								</ul>
+							</ul>
 							<br>
 
+							<div class="link_button">
+								<a href="https://medium.com/p/the-most-intuitive-and-easiest-guide-for-artificial-neural-network-6a3f2bc0eecb?source=email-1df293b5ca56--writer.postDistributed&sk=a9021d009dcd1651c16b59c6e48d0533">
+									<center>
+										<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
+									</center>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Coursera_deeplearning_ai')">
+
+					<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
-							<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
+								<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
+							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Deep Learning Speacialization on Coursera</h4>
+										<h4 class="card-title">Deep Learning Speacialization</h4>
 									</center>
 								</h4>
-									<center>
-										<p class="card-text">Certifications & All code assignments</p>
-									</center>
-									<br>
-									<ul style="list-style-type:square; text-align:left;">
-										<li>Python</li>
-										<li>Certifications</li>
-										<li>Medium</li>
-									</ul>
+								<center>
+									<p class="card-text">Certifications & All code assignments</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square">
+									<li>Python</li>
+									<li>Certifications</li>
+									<li>Medium</li>
+								</ul>
 								<br>
 
+								<div class="link_button">
+									<a href="'https://github.com/jjone36/Coursera_deeplearning_ai'">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Cosmetic')">
+
+					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
-								<img class="card-img-top" src="images/icons/cosmetic.jpg" alt="Cosmetic">
+							<a href="https://towardsdatascience.com/for-your-skin-beauty-mapping-cosmetic-items-with-bokeh-af7523ca68e51">
+								<img class="card-img-top" src="images/icons/cosmetic.gif" alt="Cosmetic">
+							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
 										<h4 class="card-title">Cosmetic Recommendation</h4>
 									</center>
 								</h4>
-									<center>
-										<p class="card-text">based on the chemical compositions of cosmetics</p>
-									</center>
-									<br>
-									<ul style="list-style-type:square; text-align:left;">
-										<li>Python</li>
-										<li>Web Scraping</li>
-										<li>Interactive Visualization</li>
-										<li>Medium</li>
-									</ul>
+								<center>
+									<p class="card-text">based on the chemical compositions of cosmetics</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square">
+									<li>Python</li>
+									<li>Web Scraping</li>
+									<li>Interactive Visualization</li>
+									<li>Medium</li>
+								</ul>
 								<br>
 
+								<div class="link_button">
+									<a href="https://github.com/jjone36/Cosmetic">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Youtube')">
+
+					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
+							<a href="https://towardsdatascience.com/strategies-to-be-a-successful-youtuber-extensive-youtube-exploratory-analysis-part-1-2-40eee29554e6">
 								<img class="card-img-top" src="images/icons/youtube.jpg" alt="youtube">
+							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
 										<h4 class="card-title">Suggesting youtuber strategy</h4>
 									</center>
 								</h4>
-									<center>
-										<p class="card-text">to be a successful youtuber</p>
-									</center>
-									<br>
-									<ul style="list-style-type:square; text-align:left;">
-										<li>R</li>
-										<li>Youtube API</li>
-										<li>Visualization</li>
-										<li>Medium</li>
-									</ul>
+								<center>
+									<p class="card-text">to be a successful youtuber</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square">
+									<li>R</li>
+									<li>Youtube API</li>
+									<li>Visualization</li>
+									<li>Medium</li>
+								</ul>
 								<br>
 
+								<div class="link_button">
+									<a href="https://github.com/jjone36/Youtube">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Cohort')">
+
+					<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
+							<a href="https://towardsdatascience.com/who-is-your-golden-goose-cohort-analysis-50c9de5dbd31">
 								<img class="card-img-top" src="images/icons/cohort.jpg" alt="cohort">
+							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
 										<h4 class="card-title">Customer Segmentation</h4>
 									</center>
 								</h4>
-									<center>
-										<p class="card-text">with RFM values and K-Means clustering</p>
-									</center>
-									<br>
-									<ul style="list-style-type:square; text-align:left;">
-										<li>Python</li>
-										<li>Visualization</li>
-										<li>Medium</li>
-									</ul>
+								<center>
+									<p class="card-text">with RFM values and K-Means clustering</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square">
+									<li>Python</li>
+									<li>Visualization</li>
+									<li>Medium</li>
+								</ul>
 								<br>
 
+								<div class="link_button">
+									<a href="https://github.com/jjone36/Cohort">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://towardsdatascience.com/hands-off-keyboard-warrior-text-mining-with-toxic-comments-6603ee3bc12e')">
+					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
-								<img class="card-img-top" src="images/icons/toxic.gif" alt="Toxic comment">
+							<a href="https://towardsdatascience.com/hands-off-keyboard-warrior-text-mining-with-toxic-comments-6603ee3bc12e">
+								<img class="card-img-top" src="images/icons/toxic.gifg" alt="Toxic comment">
+							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
 										<h4 class="card-title">Toxic Comment Classification</h4>
 									</center>
 								</h4>
-									<center>
-										<p class="card-text">with multi-headed model</p>
-									</center>
-									<br>
-									<ul style="list-style-type:square; text-align:left;">
-										<li>R</li>
-										<li>Visualization</li>
-										<li>Medium</li>
-									</ul>
+								<center>
+									<p class="card-text">with multi-headed model</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square">
+									<li>R</li>
+									<li>Visualization</li>
+									<li>Medium</li>
+								</ul>
 								<br>
 
+								<div class="link_button">
+									<a href="https://github.com/jjone36/myKaggle">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/lyrics')">
+					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
+							<a href="https://towardsdatascience.com/what-songs-tell-us-about-text-mining-with-lyrics-ca80f98b3829">
 								<img class="card-img-top" src="images/icons/lyrics.png" alt="Lyrics">
+							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
 										<h4 class="card-title">What songs tell us about</h4>
 									</center>
 								</h4>
-									<center>
-										<p class="card-text">text mining with lyrics</p>
-									</center>
-									<br>
-									<ul style="list-style-type:square; text-align:left;">
-										<li>R</li>
-										<li>Web Scraping</li>
-										<li>Visualization</li>
-										<li>Medium</li>
-									</ul>
+								<center>
+									<p class="card-text">text mining with lyrics</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square">
+									<li>R</li>
+									<li>Web Scraping</li>
+									<li>Visualization</li>
+									<li>Medium</li>
+								</ul>
 								<br>
 
+								<div class="link_button">
+									<a href="https://github.com/jjone36/lyrics">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class=" col-lg-3 col-md-4 col-sm-6 portfolio-item link-style"  onclick="javascipt:link('https://github.com/jjone36/Templete')">
+					<div class=" col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 								<img class="card-img-top" src="images/icons/templete.jpg" alt="templete">
+							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
 										<h4 class="card-title">Templete</h4>
 									</center>
 								</h4>
-									<center>
-										<p class="card-text">for data science</p>
-									</center>
-									<br>
-									<ul style="list-style-type:square; text-align:left;">
-										<li>Python</li>
-										<li>R</li>
-										<li>SQL</li>
-										<li>Pyspark</li>
-									</ul>
+								<center>
+									<p class="card-text">for data science</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square">
+									<li>Python</li>
+									<li>R</li>
+									<li>SQL</li>
+									<li>Pyspark</li>
+								</ul>
 								<br>
 
+								<div class="link_button">
+									<a href="https://github.com/jjone36/Templete">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
+				</div>
 			</div>
-		</div>
 
 		<div class="footer-bottom">
 			<p class="m-0 text-center text-white" style="font-size:18px">
