--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								<p class="card-text">with the least amount of maths</p>
 							</center>
 							<br>
-							<ul style="list-style-type:square">
+							<ul style="list-style-type:square; text-align:left;">
 									<li>Medium</li>
 							</ul>
 							<br>
@@ -174,7 +174,7 @@
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 							<a href="https://towardsdatascience.com/for-your-skin-beauty-mapping-cosmetic-items-with-bokeh-af7523ca68e51">
-								<img class="card-img-top" src="images/icons/cosmetic.gif" alt="Cosmetic">
+								<img class="card-img-top" src="images/icons/cosmetic.jpg" alt="Cosmetic">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
@@ -209,7 +209,7 @@
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 							<a href="https://towardsdatascience.com/strategies-to-be-a-successful-youtuber-extensive-youtube-exploratory-analysis-part-1-2-40eee29554e6">
-								<img class="card-img-top" src="images/icons/youtube.jpg" alt="youtube">
+								<img class="card-img-top" src="images/icons/youtube.gif" alt="youtube">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
@@ -277,7 +277,7 @@
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 							<a href="https://towardsdatascience.com/hands-off-keyboard-warrior-text-mining-with-toxic-comments-6603ee3bc12e">
-								<img class="card-img-top" src="images/icons/toxic.gifg" alt="Toxic comment">
+								<img class="card-img-top" src="images/icons/toxic.png" alt="Toxic comment">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
