--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 									<p class="card-text">Certifications & All code assignments</p>
 								</center>
 								<br>
-								<ul style="list-style-type:square">
+			 		 		  <ul style="list-style-type:square; text-align:left;">
 									<li>Python</li>
 									<li>Certifications</li>
 									<li>Medium</li>
@@ -174,7 +174,7 @@
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 							<a href="https://towardsdatascience.com/for-your-skin-beauty-mapping-cosmetic-items-with-bokeh-af7523ca68e51">
-								<img class="card-img-top" src="images/icons/cosmetic.jpg" alt="Cosmetic">
+								<img class="card-img-top" src="images/icons/cosmetic.jpg" alt="cosmetic">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
@@ -186,7 +186,7 @@
 									<p class="card-text">based on the chemical compositions of cosmetics</p>
 								</center>
 								<br>
-								<ul style="list-style-type:square">
+					  		<ul style="list-style-type:square; text-align:left;">
 									<li>Python</li>
 									<li>Web Scraping</li>
 									<li>Interactive Visualization</li>
@@ -221,7 +221,7 @@
 									<p class="card-text">to be a successful youtuber</p>
 								</center>
 								<br>
-								<ul style="list-style-type:square">
+				   			<ul style="list-style-type:square; text-align:left;">
 									<li>R</li>
 									<li>Youtube API</li>
 									<li>Visualization</li>
@@ -256,7 +256,7 @@
 									<p class="card-text">with RFM values and K-Means clustering</p>
 								</center>
 								<br>
-								<ul style="list-style-type:square">
+						   	<ul style="list-style-type:square; text-align:left;">
 									<li>Python</li>
 									<li>Visualization</li>
 									<li>Medium</li>
@@ -277,7 +277,7 @@
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 							<a href="https://towardsdatascience.com/hands-off-keyboard-warrior-text-mining-with-toxic-comments-6603ee3bc12e">
-								<img class="card-img-top" src="images/icons/toxic.png" alt="Toxic comment">
+								<img class="card-img-top" src="images/icons/toxic.png" alt="toxic">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
@@ -289,7 +289,7 @@
 									<p class="card-text">with multi-headed model</p>
 								</center>
 								<br>
-								<ul style="list-style-type:square">
+					  		<ul style="list-style-type:square; text-align:left;">
 									<li>R</li>
 									<li>Visualization</li>
 									<li>Medium</li>
@@ -310,7 +310,7 @@
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 							<a href="https://towardsdatascience.com/what-songs-tell-us-about-text-mining-with-lyrics-ca80f98b3829">
-								<img class="card-img-top" src="images/icons/lyrics.png" alt="Lyrics">
+								<img class="card-img-top" src="images/icons/lyrics.png" alt="lyrics">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
@@ -322,7 +322,7 @@
 									<p class="card-text">text mining with lyrics</p>
 								</center>
 								<br>
-								<ul style="list-style-type:square">
+					  		<ul style="list-style-type:square; text-align:left;">
 									<li>R</li>
 									<li>Web Scraping</li>
 									<li>Visualization</li>
@@ -355,7 +355,7 @@
 									<p class="card-text">for data science</p>
 								</center>
 								<br>
-								<ul style="list-style-type:square">
+					  		<ul style="list-style-type:square; text-align:left;">
 									<li>Python</li>
 									<li>R</li>
 									<li>SQL</li>
