--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
 				<br>
 				<br>
 				<p class="lead text-center" style="font-size:23px">
-						Hi, there! I'm Jiwon Jeong.	I'm a data science enthusiast, a Master's degree candidate and a writer on Medium 😍
-
+						Hi, there! I'm Jiwon Jeong.
+					</p>
+				<p class="lead text-center" style="font-size:23px">
+						I'm a data science enthusiast, a Master's degree candidate and a writer on Medium 😍
 					</p>
 			</div>
 
