--- a/index.html
+++ b/index.html
@@ -48,13 +48,9 @@
 			  		<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
 				  			<a class="nav-link" href="/">Portfolio</a>
-						</li>
 						<li class="nav-item">
-							<a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://medium.com/@jiwon.jeong">Blog</a>
+				  			<a class="nav-link" href="/contact">About Me</a>
 						</li>
-						<!-- <li class="nav-item">
-				  			<a class="nav-link" href="/applied_bayes">applied_bayes</a>		// this is how to link to a html
-						</li> -->
 			  		</ul>
 				</div>
 		  	</div>
@@ -84,7 +80,7 @@
 				<br>
 				<br>
 				<p class="lead text-center" style="font-size:23px">
-						Hi, there! I'm Jiwon Jeong.
+						Hi, there!
 					</p>
 				<p class="lead text-center" style="font-size:23px">
 						I'm a data science enthusiast, a Master's degree candidate and a writer on Medium 😍
@@ -116,7 +112,7 @@
 						<div class="card-body">
 							<h4 class="card-title">
 								<center>
-									<h4 class="card-title">Demystifying the basics of ANN</h4>
+									<h4 class="card-title">Demystifying the Basics of ANN</h4>
 								</center>
 							</h4>
 							<center>
@@ -125,6 +121,7 @@
 							<br>
 							<ul style="list-style-type:square; text-align:left;">
 									<li>Medium</li>
+									<li>Date : Jan 2019</li>
 							</ul>
 							<br>
 
@@ -151,18 +148,19 @@
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">Certifications & All code assignments</p>
+									<p class="card-text">certifications & code assignments</p>
 								</center>
 								<br>
 			 		 		  <ul style="list-style-type:square; text-align:left;">
 									<li>Python</li>
 									<li>Certifications</li>
 									<li>Medium</li>
+									<li>Date : Jan 2019</li>
 								</ul>
 								<br>
 
 								<div class="link_button">
-									<a href="'https://github.com/jjone36/Coursera_deeplearning_ai'">
+									<a href="https://github.com/jjone36/Coursera_deeplearning_ai">
 										<center>
 											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 										</center>
@@ -175,7 +173,7 @@
 
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
-							<a href="https://towardsdatascience.com/for-your-skin-beauty-mapping-cosmetic-items-with-bokeh-af7523ca68e51">
+							<a href="https://towardsdatascience.com/for-your-skin-beauty-mapping-cosmetic-items-with-bokeh-af7523ca68e5">
 								<img class="card-img-top" src="images/icons/cosmetic.jpg" alt="cosmetic">
 							</a>
 							<div class="card-body">
@@ -191,8 +189,8 @@
 					  		<ul style="list-style-type:square; text-align:left;">
 									<li>Python</li>
 									<li>Web Scraping</li>
-									<li>Interactive Visualization</li>
 									<li>Medium</li>
+									<li>Date : Nov 2018</li>
 								</ul>
 								<br>
 
@@ -207,6 +205,36 @@
 						</div>
 					</div>
 
+					<div class="blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/api.png" alt="api">
+							</a>
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">What Is API</h4>
+									</center>
+								</h4>
+								<center>
+									<p class="card-text">and how to use Youtube API</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square; text-align:left;">
+										<li>Medium</li>
+										<li>Date : Nov 2018</li>
+								</ul>
+								<br>
+
+								<div class="link_button">
+									<a href="https://towardsdatascience.com/what-is-api-and-how-to-use-youtube-api-65525744f520">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
+										</center>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
 
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
@@ -226,8 +254,8 @@
 				   			<ul style="list-style-type:square; text-align:left;">
 									<li>R</li>
 									<li>Youtube API</li>
-									<li>Visualization</li>
 									<li>Medium</li>
+									<li>Date : Oct 2018</li>
 								</ul>
 								<br>
 
@@ -255,13 +283,14 @@
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">with RFM values and K-Means clustering</p>
+									<p class="card-text">with RFM and K-Means clustering</p>
 								</center>
 								<br>
 						   	<ul style="list-style-type:square; text-align:left;">
 									<li>Python</li>
 									<li>Visualization</li>
 									<li>Medium</li>
+									<li>Date : Dec 2018</li>
 								</ul>
 								<br>
 
@@ -284,17 +313,18 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Toxic Comment Classification</h4>
+										<h4 class="card-title">Toxic Comment Detector</h4>
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">with multi-headed model</p>
+									<p class="card-text">with multi-headed models</p>
 								</center>
 								<br>
 					  		<ul style="list-style-type:square; text-align:left;">
 									<li>R</li>
-									<li>Visualization</li>
+									<li>Classification</li>
 									<li>Medium</li>
+									<li>Date : Oct 2018</li>
 								</ul>
 								<br>
 
@@ -317,18 +347,18 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">What songs tell us about</h4>
+										<h4 class="card-title">What Songs Tell Us About</h4>
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">text mining with lyrics</p>
+									<p class="card-text">by the Billboard chart</p>
 								</center>
 								<br>
 					  		<ul style="list-style-type:square; text-align:left;">
 									<li>R</li>
 									<li>Web Scraping</li>
-									<li>Visualization</li>
 									<li>Medium</li>
+									<li>Date : Oct 2018</li>
 								</ul>
 								<br>
 
@@ -378,13 +408,15 @@
 				</div>
 			</div>
 
-		<div class="footer-bottom">
-			<p class="m-0 text-center text-white" style="font-size:18px">
+  <div class="fixed-bottom">
+		  <div class="footer-bottom">
+			 <p class="m-0 text-center text-white" style="font-size:18px">
 				<a> Template by </a>
 				<a target="_blank" href="https://gsurma.github.io/">
 					Greg Surma
 				</a>
 				<!-- <script>document.write(new Date().getFullYear())</script></p> -->
-		</div>
+		  </div>
+	  </div>
 	</body>
 </html>
