--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+		<link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-touch-icon-120x120.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
 		<link rel="manifest" href="favicons/manifest.json">
@@ -21,38 +22,39 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<meta name="description" content="Grzegorz Jiwon Jeong - Portfolio; iOS, macOS, Apps, Games, AI, Cryptography, Utilities">
-		<meta name="keywords" content="iOS, macOS, app, game, apple, ai, native, freelance, software, dev, developer, iphone, ipad, programming, computers, swift, objective-c, python, cryptography, artificial intelligence, computer, it, internet, engineering, development">
-		<meta name="author" content="Grzegorz Jiwon Jeong">
+		<meta name="description" content="Jiwon Jeong - Portfolio; Data Scince, Machine Learning, Statistical Analysis, AI, Mathematics, Data Visualisation">
+		<meta name="keywords" content="ai, software, programming, computers, python, R, artificial intelligence, computer, it, machine learning, Statistical Analysis, statistics">
+		<meta name="author" content="Jiwon Jeong">
 
-		<title>Jiwon Jeong - Contact</title>
+		<title>Jiwon Jeong - Portfolio</title>
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet">
 
 		<script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/jquery.isotope.js" type="text/javascript"></script>
+		<script src="js/filter.js" type="text/javascript"></script>
 		<script src="js/bootstrap.bundle.min.js"></script>
-		{% seo %}
+		<script src="js/main.js"></script>
 	</head>
 
-	<body>
-	<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-		<div class="container">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-				</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-							<a class="nav-link" href="/">Portfolio</a>
-					</li>
-					<li class="nav-item">
-							<a class="nav-link" href="/contact">About Me</a>
-					</li>
-					</ul>
-			</div>
-			</div>
-		</nav>
+  	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+			<div class="container">
+		  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+		  		</button>
+				<div class="collapse navbar-collapse" id="navbarResponsive">
+			  		<ul class="navbar-nav ml-auto">
+						<li class="nav-item active">
+				  			<a class="nav-link" href="/">Portfolio</a>
+						<li class="nav-item">
+				  			<a class="nav-link" href="/contact">About Me</a>
+						</li>
+			  		</ul>
+				</div>
+		  	</div>
+	  	</nav>
 
 		<div class="container" align="center">
 			<h1 class="my-4">Jiwon Jeong
@@ -84,7 +86,10 @@
 						I'm a graduate student researching data science and business strategy at Yonsei University🤓
 					</p>
 				<p class="lead text-center" style="font-size:23px">
-						I also love traveling🌎, books📚, music🎧, art gallery🎨, and regular gym workout💪
+						I also love traveling🌎, books📚,
+					</p>
+				<p class="lead text-center" style="font-size:23px">
+						music🎧, art gallery🎨, and regular gym workout💪
 					</p>
 				<p class="lead text-center" style="font-size:23px">
 					 Feel free to contact me!
