api order change

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">certifications & code assignments</p>
+									<p class="card-text">with code assignments</p>
 								</center>
 								<br>
 			 		 		  <ul style="list-style-type:square; text-align:left;">
@@ -183,7 +183,7 @@
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">based on the chemical compositions of cosmetics</p>
+									<p class="card-text">with word embedding</p>
 								</center>
 								<br>
 					  		<ul style="list-style-type:square; text-align:left;">
@@ -196,6 +196,41 @@
 
 								<div class="link_button">
 									<a href="https://github.com/jjone36/Cosmetic">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
+						<div class="card h-100">
+							<a href="https://towardsdatascience.com/strategies-to-be-a-successful-youtuber-extensive-youtube-exploratory-analysis-part-1-2-40eee29554e6">
+								<img class="card-img-top" src="images/icons/youtube.gif" alt="youtube">
+							</a>
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">Suggesting youtuber strategy</h4>
+									</center>
+								</h4>
+								<center>
+									<p class="card-text">to be a successful youtuber</p>
+								</center>
+								<br>
+				   			<ul style="list-style-type:square; text-align:left;">
+									<li>R</li>
+									<li>Youtube API</li>
+									<li>Medium</li>
+									<li>Date : Oct 2018</li>
+								</ul>
+								<br>
+
+								<div class="link_button">
+									<a href="https://github.com/jjone36/Youtube">
 										<center>
 											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 										</center>
@@ -234,42 +269,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
-
-					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
-						<div class="card h-100">
-							<a href="https://towardsdatascience.com/strategies-to-be-a-successful-youtuber-extensive-youtube-exploratory-analysis-part-1-2-40eee29554e6">
-								<img class="card-img-top" src="images/icons/youtube.gif" alt="youtube">
-							</a>
-							<div class="card-body">
-								<h4 class="card-title">
-									<center>
-										<h4 class="card-title">Suggesting youtuber strategy</h4>
-									</center>
-								</h4>
-								<center>
-									<p class="card-text">to be a successful youtuber</p>
-								</center>
-								<br>
-				   			<ul style="list-style-type:square; text-align:left;">
-									<li>R</li>
-									<li>Youtube API</li>
-									<li>Medium</li>
-									<li>Date : Oct 2018</li>
-								</ul>
-								<br>
-
-								<div class="link_button">
-									<a href="https://github.com/jjone36/Youtube">
-										<center>
-											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
-										</center>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-
+					</div>					
 
 					<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
@@ -283,7 +283,7 @@
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">with RFM and K-Means clustering</p>
+									<p class="card-text">with RFM & K-Means clustering</p>
 								</center>
 								<br>
 						   	<ul style="list-style-type:square; text-align:left;">
