--- a/contact.html
+++ b/contact.html
@@ -80,10 +80,10 @@
 				<br>
 				<br>
 				<p class="lead text-center" style="font-size:23px">
-						Hi, I'm Jiwon Jeong
+						Hi, I'm Jiwon
 					</p>
 				<p class="lead text-center" style="font-size:23px">
-						I'm a graduate student researching data science and business strategy at Yonsei University🤓
+						I'm a graduate student researching data science and business strategy at Yonsei University
 					</p>
 				<p class="lead text-center" style="font-size:23px">
 						I also love traveling🌎, books📚,
