--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 								</div>
 							</div>
 						</div>
-					</div>					
+					</div>
 
 					<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
@@ -279,7 +279,7 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Customer Segmentation</h4>
+										<h4 class="card-title">Cohort Analysis</h4>
 									</center>
 								</h4>
 								<center>
