--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Templete</h4>
+										<h4 class="card-title">Template</h4>
 									</center>
 								</h4>
 								<center>
@@ -396,7 +396,7 @@
 								<br>
 
 								<div class="link_button">
-									<a href="https://github.com/jjone36/Templete">
+									<a href="https://github.com/jjone36/Template">
 										<center>
 											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 										</center>
