--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,9 @@
 		  		</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 			  		<ul class="navbar-nav ml-auto">
-						<li class="nav-item active">
-				  			<a class="nav-link" href="/">Portfolio</a>
 						<li class="nav-item">
+				  			<a class="nav-link" href="/">Portfolio</a>
+						<li class="nav-item active">
 				  			<a class="nav-link" href="/contact">About Me</a>
 						</li>
 			  		</ul>
@@ -83,10 +83,10 @@
 						Hi, I'm Jiwon
 					</p>
 				<p class="lead text-center" style="font-size:23px">
-						I'm a graduate student researching data science and business strategy at Yonsei University
+						I'm a graduate student researching data science and business strategies at Yonsei University
 					</p>
 				<p class="lead text-center" style="font-size:23px">
-						I also love traveling🌎, books📚,
+						I love traveling🌎, books📚,
 					</p>
 				<p class="lead text-center" style="font-size:23px">
 						music🎧, art gallery🎨, and regular gym workout💪
