--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Suggesting youtuber strategy</h4>
+										<h4 class="card-title">Suggesting Youtuber Strategy</h4>
 									</center>
 								</h4>
 								<center>
@@ -233,6 +233,37 @@
 									<a href="https://github.com/jjone36/Youtube">
 										<center>
 											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/he.gif" alt="he">
+							</a>
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">How I finished DL Speacialization in 4 Weeks</h4>
+									</center>
+								</h4>
+								<center>
+									<p class="card-text">My secret of learning DS</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square; text-align:left;">
+										<li>Medium</li>
+										<li>Date : Jan 2019</li>
+								</ul>
+								<br>
+
+								<div class="link_button">
+									<a href="https://medium.com/@jiwon.jeong/how-i-finished-andrew-ngs-deep-learning-specialization-in-just-4-weeks-51818f0d452e?source=friends_link&sk=45625399a5a422927fec6e24aeb017a3">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
 										</center>
 									</a>
 								</div>
