--- a/index.html
+++ b/index.html
@@ -137,39 +137,36 @@
 				</div>
 
 
-					<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
-								<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
+								<img class="card-img-top" src="images/icons/he.gif" alt="he">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Deep Learning Speacialization</h4>
+										<h4 class="card-title">Finishing DL Speacialization in 4 Weeks</h4>
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">with code assignments</p>
+									<p class="card-text">My secret of learning DS</p>
 								</center>
 								<br>
-			 		 		  <ul style="list-style-type:square; text-align:left;">
-									<li>Python</li>
-									<li>Certifications</li>
-									<li>Medium</li>
-									<li>Date : Jan 2019</li>
+								<ul style="list-style-type:square; text-align:left;">
+										<li>Medium</li>
+										<li>Date : Jan 2019</li>
 								</ul>
 								<br>
 
 								<div class="link_button">
-									<a href="https://github.com/jjone36/Coursera_deeplearning_ai">
+									<a href="https://medium.com/@jiwon.jeong/how-i-finished-andrew-ngs-deep-learning-specialization-in-just-4-weeks-51818f0d452e?source=friends_link&sk=45625399a5a422927fec6e24aeb017a3">
 										<center>
-											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
 										</center>
 									</a>
 								</div>
 							</div>
 						</div>
 					</div>
-
 
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
@@ -240,36 +237,39 @@
 						</div>
 					</div>
 
-					<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
-								<img class="card-img-top" src="images/icons/he.gif" alt="he">
+								<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">How I finished DL Speacialization in 4 Weeks</h4>
+										<h4 class="card-title">Deep Learning Speacialization</h4>
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">My secret of learning DS</p>
+									<p class="card-text">with code assignments</p>
 								</center>
 								<br>
-								<ul style="list-style-type:square; text-align:left;">
-										<li>Medium</li>
-										<li>Date : Jan 2019</li>
+			 		 		  <ul style="list-style-type:square; text-align:left;">
+									<li>Python</li>
+									<li>Certifications</li>
+									<li>Medium</li>
+									<li>Date : Jan 2019</li>
 								</ul>
 								<br>
 
 								<div class="link_button">
-									<a href="https://medium.com/@jiwon.jeong/how-i-finished-andrew-ngs-deep-learning-specialization-in-just-4-weeks-51818f0d452e?source=friends_link&sk=45625399a5a422927fec6e24aeb017a3">
+									<a href="https://github.com/jjone36/Coursera_deeplearning_ai">
 										<center>
-											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 										</center>
 									</a>
 								</div>
 							</div>
 						</div>
 					</div>
+
 
 					<div class="blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
