4week title change

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Finishing DL Speacialization in 4 Weeks</h4>
+										<h4 class="card-title">How I Finished DL Speacialization in 4 Weeks</h4>
 									</center>
 								</h4>
 								<center>
@@ -269,7 +269,6 @@
 							</div>
 						</div>
 					</div>
-
 
 					<div class="blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
